--- a/TestImgAreaSelect/TestImgAreaSelect/TestImgAreaSelect.csproj
+++ b/TestImgAreaSelect/TestImgAreaSelect/TestImgAreaSelect.csproj
@@ -47,6 +47,10 @@
       <HintPath>..\packages\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.1.0.3\lib\net45\Microsoft.CodeDom.Providers.DotNetCompilerPlatform.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=10.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.10.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -90,11 +94,11 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Plugin\modal\imgmodal.js" />
     <Content Include="Plugin\modal\modal.css" />
     <Content Include="Content\Site.css" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
-    <Content Include="images\phpPSXnKG.jpg" />
     <Content Include="Plugin\jquery.imgareaselect-0.9.10\css\border-anim-h.gif" />
     <Content Include="Plugin\jquery.imgareaselect-0.9.10\css\border-anim-v.gif" />
     <Content Include="Plugin\jquery.imgareaselect-0.9.10\css\border-h.gif" />
@@ -124,6 +128,8 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tool\ImgUploadPlugin\ImgUploadFactory.cs" />
+    <Compile Include="Tool\ImgUploadPlugin\ImgUploadInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
